--- a/poke-api/src/App.css
+++ b/poke-api/src/App.css
@@ -1,13 +1,31 @@
 body {
   background-color: rgb(237, 237, 237);
+
 }
 
-.card {
-  border: 8px yellowgreen solid;
+.App {
+
   display: flex;
   flex-direction: column;
 
-  width: 400px;
+  gap: 40px
+}
+
+.search {
+  margin: auto;
+  margin-top: 40px; 
+}
+
+.card {
+  border: 4px yellowgreen solid;
+  display: flex;
+  flex-direction: column;
+
+  width: 350px;
+
+  margin: 50px 0px;
+
+  margin: auto;
 }
 
 .card > * {
